[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Christopher Sherman <crsherman98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
sqlalchemy = "^2.0.30"
flask-cors = "^4.0.1"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
